--- a/templates/nvim/config.lua.j2
+++ b/templates/nvim/config.lua.j2
@@ -6,6 +6,7 @@ require('telescope').setup {
       base_dirs = {% raw %}{{% endraw %}
         {{ extra_bookmarks_project }}
       {% raw %}}{% endraw %}
+    {% raw %}}{% endraw %}
   {% raw %}}{% endraw %}
 {% raw %}}{% endraw %}
 vim.api.nvim_set_keymap(
