--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -263,41 +263,41 @@ call plug#end()
         \ 'accept_key': '<Down>',
         \ 'reject_key': '<Up>',
         \ })
-  call wilder#set_option('pipeline', [
-        \   wilder#branch(
-        \     wilder#python_file_finder_pipeline({
-        \       'file_command': ['{{ nix_bin }}/fd', '-tf'],
-        \       'dir_command': ['{{ nix_bin }}/fd', '-td'],
-        \       'filters': ['fuzzy_filter', 'difflib_sorter'],
-        \     }),
-        \     wilder#cmdline_pipeline({
-        \       'language': 'python',
-        \       'fuzzy': 1,
-        \     }),
-        \     wilder#python_search_pipeline(),
-        \   ),
-        \ ])
-  call wilder#set_option('renderer', wilder#wildmenu_renderer(
-        \ wilder#wildmenu_airline_theme({
-        \   'highlights': {},
-        \   'highlighter': wilder#basic_highlighter(),
-        \   'separator': ' · ',
-        \ })))
-  call wilder#set_option('renderer', wilder#popupmenu_renderer(wilder#popupmenu_border_theme({
-        \ 'highlights': {
-        \   'border': 'Normal',
-        \ },
-        \ 'border': 'rounded',
-        \ })))
-  call wilder#set_option('renderer', wilder#popupmenu_renderer({
-        \ 'highlighter': wilder#basic_highlighter(),
-        \ 'left': [
-        \   ' ', wilder#popupmenu_devicons(),
-        \ ],
-        \ 'right': [
-        \   ' ', wilder#popupmenu_scrollbar(),
-        \ ],
-        \ }))
+" call wilder#set_option('pipeline', [
+"       \   wilder#branch(
+"       \     wilder#python_file_finder_pipeline({
+"       \       'file_command': ['{{ nix_bin }}/fd', '-tf'],
+"       \       'dir_command': ['{{ nix_bin }}/fd', '-td'],
+"       \       'filters': ['fuzzy_filter', 'difflib_sorter'],
+"       \     }),
+"       \     wilder#cmdline_pipeline({
+"       \       'language': 'python',
+"       \       'fuzzy': 1,
+"       \     }),
+"       \     wilder#python_search_pipeline(),
+"       \   ),
+"       \ ])
+" call wilder#set_option('renderer', wilder#wildmenu_renderer(
+"       \ wilder#wildmenu_airline_theme({
+"       \   'highlights': {},
+"       \   'highlighter': wilder#basic_highlighter(),
+"       \   'separator': ' · ',
+"       \ })))
+" call wilder#set_option('renderer', wilder#popupmenu_renderer(wilder#popupmenu_border_theme({
+"       \ 'highlights': {
+"       \   'border': 'Normal',
+"       \ },
+"       \ 'border': 'rounded',
+"       \ })))
+" call wilder#set_option('renderer', wilder#popupmenu_renderer({
+"       \ 'highlighter': wilder#basic_highlighter(),
+"       \ 'left': [
+"       \   ' ', wilder#popupmenu_devicons(),
+"       \ ],
+"       \ 'right': [
+"       \   ' ', wilder#popupmenu_scrollbar(),
+"       \ ],
+"       \ }))
 " call wilder#set_option('renderer', wilder#popupmenu_renderer({
 "       \ 'highlighter': [
 "       \   wilder#lua_pcre2_highlighter(),
@@ -307,6 +307,67 @@ call plug#end()
 "       \   'accent': wilder#make_hl('WilderAccent', 'Pmenu', [{}, {}, {'foreground': '#f4468f'}]),
 "       \ },
 "       \ }))
+  call wilder#set_option('pipeline', [
+        \   wilder#branch(
+        \     wilder#python_file_finder_pipeline({
+        \       'file_command': {_, arg -> stridx(arg, '.') != -1 ? ['{{ nix_bin }}/fd', '-tf', '-H'] : ['{{ nix_bin }}/fd', '-tf']},
+        \       'dir_command': ['{{ nix_bin }}/fd', '-td'],
+        \       'filters': ['fuzzy_filter', 'difflib_sorter'],
+        \     }),
+        \     wilder#substitute_pipeline({
+        \       'pipeline': wilder#python_search_pipeline({
+        \         'skip_cmdtype_check': 1,
+        \         'pattern': wilder#python_fuzzy_pattern({
+        \           'start_at_boundary': 0,
+        \         }),
+        \       }),
+        \     }),
+        \     wilder#cmdline_pipeline({
+        \       'fuzzy': 1,
+        \       'fuzzy_filter': wilder#vim_fuzzy_filter(),
+        \     }),
+        \     [
+        \       wilder#check({_, x -> empty(x)}),
+        \       wilder#history(),
+        \     ],
+        \     wilder#python_search_pipeline({
+        \       'pattern': wilder#python_fuzzy_pattern({
+        \         'start_at_boundary': 0,
+        \       }),
+        \     }),
+        \   ),
+        \ ])
+  let s:highlighters = [
+        \ wilder#basic_highlighter()
+        \ ]
+  let s:popupmenu_renderer = wilder#popupmenu_renderer(wilder#popupmenu_border_theme({
+        \ 'border': 'rounded',
+        \ 'empty_message': wilder#popupmenu_empty_message_with_spinner(),
+        \ 'highlighter': wilder#basic_highlighter(),
+        \ 'left': [
+        \   ' ',
+        \   wilder#popupmenu_devicons(),
+        \   wilder#popupmenu_buffer_flags({
+        \     'flags': ' a + ',
+        \     'icons': {'+': '', 'a': '', 'h': ''},
+        \   }),
+        \ ],
+        \ 'right': [
+        \   ' ',
+        \   wilder#popupmenu_scrollbar(),
+        \ ],
+        \ }))
+  let s:wildmenu_renderer = wilder#wildmenu_renderer({
+        \ 'highlighter': s:highlighters,
+        \ 'separator': ' · ',
+        \ 'left': [' ', wilder#wildmenu_spinner(), ' '],
+        \ 'right': [' ', wilder#wildmenu_index()],
+        \ })
+  call wilder#set_option('renderer', wilder#renderer_mux({
+        \ ':': s:popupmenu_renderer,
+        \ '/': s:wildmenu_renderer,
+        \ 'substitute': s:wildmenu_renderer,
+        \ }))
 " Wilder.nvim Settings(End) ---------------------------------------------------
 
 " Floaterm Settings -----------------------------------------------------------
