Switch from screenfetch to macchina.

--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -195,6 +195,7 @@ export POWERLEVEL10K_MODE=nerdfont-complete
 
 ###############################################################################
 # BEGIN: Screenfetch
-{{ nix_bin }}/screenfetch
+#{{ nix_bin }}/screenfetch
+{{ nix_bin }}/macchina
 # END: Screenfetch
 ###############################################################################
