--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -29,6 +29,7 @@ call plug#begin('{{ nvim_plugged_dir }}')
   " ---------------------------------------------------------------------------
   Plug 'ryanoasis/vim-devicons'
   " ---------------------------------------------------------------------------
+" Plug 'beauwilliams/focus.nvim'
   Plug 'gelguy/wilder.nvim', { 'do': ':UpdateRemotePlugins' }
   Plug 'rbgrouleff/bclose.vim'
   Plug 'skyuplam/broot.nvim'
@@ -171,20 +172,20 @@ call plug#end()
 " map <C-h> <BS>
   nnoremap <C-j> <C-w>j
   xnoremap <C-j> <C-w>j
-  nnoremap <C-w>j <C-w>J
-  xnoremap <C-w>j <C-w>J
   nnoremap <C-k> <C-w>k
   xnoremap <C-k> <C-w>k
-  nnoremap <C-w>k <C-w>K
-  xnoremap <C-w>k <C-w>K
   nnoremap <C-h> <C-w>h
   xnoremap <C-h> <C-w>h
-  nnoremap <C-w>h <C-w>H
-  xnoremap <C-w>h <C-w>H
   nnoremap <C-l> <C-w>l
   xnoremap <C-l> <C-w>l
-  nnoremap <C-w>l <C-w>L
-  xnoremap <C-w>l <C-w>L
+" nnoremap <C-w>j <C-w>J
+" xnoremap <C-w>j <C-w>J
+" nnoremap <C-w>k <C-w>K
+" xnoremap <C-w>k <C-w>K
+" nnoremap <C-w>h <C-w>H
+" xnoremap <C-w>h <C-w>H
+" nnoremap <C-w>l <C-w>L
+" xnoremap <C-w>l <C-w>L
 " Misc Functions  -------------------------------------------------------------
   vnoremap J :m '>+1<CR>gv=gv
   vnoremap K :m '<-2<CR>gv=gv
