--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -62,8 +62,8 @@ call plug#begin('{{ nvim_plugged_dir }}')
   Plug 'vijaymarupudi/nvim-fzf'
   Plug 'kyazdani42/nvim-web-devicons'
   " Session Management --------------------------------------------------------
-  Plug 'rmagatti/auto-session'
-  Plug 'rmagatti/session-lens'
+" Plug 'rmagatti/auto-session'
+" Plug 'rmagatti/session-lens'
   " Syntax Highlighting -------------------------------------------------------
   Plug 'vim-scripts/bnf.vim'
   Plug 'vim-scripts/ebnf.vim'
@@ -532,9 +532,9 @@ call plug#end()
 
 " Auto-Session Settings -------------------------------------------------------
 " let g:auto_session_pre_restore_cmds = ["CocDisable"]
-  let g:auto_session_post_restore_cmds = ["ReloadVimrc", "CocRestart"]
+" let g:auto_session_post_restore_cmds = ["ReloadVimrc", "CocRestart"]
 " nnoremap <silent> [telescope-p]s :SearchSession<CR>
-  nnoremap <silent> <Leader>p :SearchSession<CR>
+" nnoremap <silent> <Leader>p :SearchSession<CR>
 " Auto-Session Settings(End) --------------------------------------------------
 
 " Treesitter/Neorg Settings ---------------------------------------------------
