--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -52,7 +52,7 @@ call plug#begin('{{ nvim_plugged_dir }}')
   " Split UI ------------------------------------------------------------------
   " Selection UI --------------------------------------------------------------
   Plug 'nvim-telescope/telescope.nvim'
-" Plug 'nvim-telescope/telescope-project.nvim'
+  Plug 'nvim-telescope/telescope-project.nvim'
   Plug 'junegunn/fzf', { 'do': { -> fzf#install() } }
   Plug 'junegunn/fzf.vim'
   Plug 'voldikss/fzf-floaterm'
