--- a/templates/nvim/config.lua.j2
+++ b/templates/nvim/config.lua.j2
@@ -4,7 +4,7 @@ require('telescope').setup {
   extensions = {
     project = {
       base_dirs = {% raw %}{{% endraw %}
-        {% raw %}{{% endraw %}'{{ code_checkout_path }}', max_depth = 2{% raw %}}{% endraw %},
+        {% raw %}{{% endraw %}'{{ code_checkout_path_github }}', max_depth = 2{% raw %}}{% endraw %},
         {% raw %}{{% endraw %}'{{ dotfiles_user_home }}', max_depth = 2{% raw %}}{% endraw %},
       {% raw %}}{% endraw %}
     }
