Add nix syntax highlighting.

--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -68,6 +68,8 @@ call plug#begin('{{ nvim_plugged_dir }}')
   Plug 'vim-scripts/bnf.vim'
   Plug 'vim-scripts/ebnf.vim'
   " Unit Testing --------------------------------------------------------------
+  " Nix -----------------------------------------------------------------------
+  Plug 'LnL7/vim-nix'
   " Ansible -------------------------------------------------------------------
   Plug 'pearofducks/ansible-vim'
   " Language Server Protocol --------------------------------------------------
