--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -50,6 +50,7 @@ call plug#begin('{{ nvim_plugged_dir }}')
   Plug 'skywind3000/asyncrun.extra'
   Plug 'mhinz/vim-signify'
   " Split UI ------------------------------------------------------------------
+  Plug 'dstein64/vim-win'
   " Selection UI --------------------------------------------------------------
   Plug 'nvim-telescope/telescope.nvim'
   Plug 'nvim-telescope/telescope-project.nvim'
@@ -172,14 +173,40 @@ call plug#end()
   set splitbelow
 " map <BS> <C-w>h
 " map <C-h> <BS>
-  nnoremap <C-j> <C-w>j
-  xnoremap <C-j> <C-w>j
-  nnoremap <C-k> <C-w>k
-  xnoremap <C-k> <C-w>k
-  nnoremap <C-h> <C-w>h
-  xnoremap <C-h> <C-w>h
-  nnoremap <C-l> <C-w>l
-  xnoremap <C-l> <C-w>l
+  nmap <Leader>w [vim-win]
+  xmap <Leader>w [vim-win]
+  nnoremap [vim-win]j :Win<cr>sj
+  xnoremap [vim-win]j :Win<cr>sj
+  nnoremap [vim-win]k :Win<cr>sk
+  xnoremap [vim-win]k :Win<cr>sk
+  nnoremap [vim-win]h :Win<cr>sh
+  xnoremap [vim-win]h :Win<cr>sh
+  nnoremap [vim-win]l :Win<cr>sl
+  xnoremap [vim-win]l :Win<cr>sl
+  nnoremap <C-j> :Win<cr>j
+  xnoremap <C-j> :Win<cr>j
+  nnoremap <C-k> :Win<cr>k
+  xnoremap <C-k> :Win<cr>k
+  nnoremap <C-h> :Win<cr>h
+  xnoremap <C-h> :Win<cr>h
+  nnoremap <C-l> :Win<cr>l
+  xnoremap <C-l> :Win<cr>l
+  nnoremap <C-w>j :Win<cr>J
+  xnoremap <C-w>j :Win<cr>J
+  nnoremap <C-w>k :Win<cr>K
+  xnoremap <C-w>k :Win<cr>K
+  nnoremap <C-w>h :Win<cr>H
+  xnoremap <C-w>h :Win<cr>H
+  nnoremap <C-w>l :Win<cr>L
+  xnoremap <C-w>l :Win<cr>L
+" nnoremap <C-j> <C-w>j
+" xnoremap <C-j> <C-w>j
+" nnoremap <C-k> <C-w>k
+" xnoremap <C-k> <C-w>k
+" nnoremap <C-h> <C-w>h
+" xnoremap <C-h> <C-w>h
+" nnoremap <C-l> <C-w>l
+" xnoremap <C-l> <C-w>l
 " nnoremap <C-w>j <C-w>J
 " xnoremap <C-w>j <C-w>J
 " nnoremap <C-w>k <C-w>K
