--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -112,7 +112,7 @@ call plug#end()
   set list listchars=tab:▸▸,trail:·
 " Enable mouse mode
   set mouse=a
-  set nowrap
+  set nowrap           " do not automatically wrap on load
   set formatoptions-=t " do not automatically wrap text when typing
 " Use the system clipboard
   set clipboard+=unnamedplus
