Add neovim shortcuts to cheatsheet.

--- a/templates/navi/cheat.j2
+++ b/templates/navi/cheat.j2
@@ -1,3 +1,11 @@
+% neovim
+
+# Remove ALL Plugins
+rm -rf ~/.local/share/nvim/plugged/*
+
+# Install Plugins
+nvim --headless +PlugInstall +qall
+
 % nix
 
 # Source Nix Profile
