Only enable neorg treesitter parser by default.

--- a/templates/nvim/config.lua.j2
+++ b/templates/nvim/config.lua.j2
@@ -136,13 +136,7 @@ require'nvim-treesitter.configs'.setup {
     disable = {},
   },
   ensure_installed = {
-    "norg",
-    "haskell",
-    "c",
-    "cpp",
-    "json",
-    "yaml",
-    "rust"
+    "norg"
   },
 }
 
