Add telescope-ui plugin.

--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -56,6 +56,7 @@ call plug#begin('{{ nvim_plugged_dir }}')
   " Selection UI --------------------------------------------------------------
   Plug 'nvim-telescope/telescope.nvim'
   Plug 'nvim-telescope/telescope-project.nvim'
+  Plug 'nvim-telescope/telescope-ui-select.nvim'
   Plug 'junegunn/fzf', { 'do': { -> fzf#install() } }
   Plug 'junegunn/fzf.vim'
   Plug 'voldikss/fzf-floaterm'
