Add home-manager support to zsh.

--- a/templates/zsh/zshrc.j2
+++ b/templates/zsh/zshrc.j2
@@ -12,10 +12,11 @@ zstyle :compinstall filename '/home/{{ zsh_username }}/.zshrc'
 autoload -Uz compinit
 compinit
 # End of lines added by compinstall
-# . /home/{{ zsh_username }}/.nix-profile/etc/profile.d/nix.sh
+. /home/{{ zsh_username }}/.nix-profile/etc/profile.d/nix.sh
+. /home/{{ zsh_username }}/.nix-profile/etc/profile.d/hm-session-vars.sh
 # source ~/.nix-profile/etc/profile.d/nix.sh
 export PATH=$PATH:{{ bin_directory }}
-export PATH=$PATH:{{ nix_bin }}
+# export PATH=$PATH:{{ nix_bin }}
 # END: Base
 ###############################################################################
 
