Use lightspeed instead of hop/sneak.

--- a/templates/nvim/init.vim.j2
+++ b/templates/nvim/init.vim.j2
@@ -21,8 +21,9 @@ call plug#begin('{{ nvim_plugged_dir }}')
   " Plug 'machakann/vim-sandwich'
   Plug 'tpope/vim-surround'
   Plug 'wellle/targets.vim'
-  Plug 'justinmk/vim-sneak'
-  Plug 'phaazon/hop.nvim'
+  Plug 'ggandor/lightspeed.nvim'
+" Plug 'justinmk/vim-sneak'
+" Plug 'phaazon/hop.nvim'
   " Theme ---------------------------------------------------------------------
   Plug 'morhetz/gruvbox'
   " Needed Before Devicons ----------------------------------------------------
@@ -780,14 +781,14 @@ call plug#end()
 " ALE Settings(End) -----------------------------------------------------------
 
 " Sneak Settings --------------------------------------------------------------
-  let g:sneak#label = 1
-  map s <Plug>Sneak_s
-  map S <Plug>Sneak_S
-  map f <Plug>Sneak_f
-  map F <Plug>Sneak_F
-  map t <Plug>Sneak_t
-  map T <Plug>Sneak_T
-  map \ <Plug>Sneak_,
+" let g:sneak#label = 1
+" map s <Plug>Sneak_s
+" map S <Plug>Sneak_S
+" map f <Plug>Sneak_f
+" map F <Plug>Sneak_F
+" map t <Plug>Sneak_t
+" map T <Plug>Sneak_T
+" map \ <Plug>Sneak_,
 " map <Bslash> <Plug>Sneak_,
 " Sneak Settings(End) ---------------------------------------------------------
 
