--- a/templates/nvim/config.lua.j2
+++ b/templates/nvim/config.lua.j2
@@ -186,9 +186,11 @@ end)
 -- }
 -- require("telescope").load_extension("session-lens")
 
+-- Lightspeed Settings
+
 -- Hop Settings
-require'hop'.setup()
-vim.api.nvim_set_keymap('n', ',', "<cmd>lua require'hop'.hint_words()<cr>", {noremap = true})
+-- require'hop'.setup()
+-- vim.api.nvim_set_keymap('n', ',', "<cmd>lua require'hop'.hint_words()<cr>", {noremap = true})
 
 -- DAP Settings
 require("dapui").setup()
