--- a/templates/tmux/tmux.conf.j2
+++ b/templates/tmux/tmux.conf.j2
@@ -1,13 +1,11 @@
-# List of plugins
+# Default Plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+# Extra Plugins
 set -g @plugin 'whame/tmux-modal'
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
+set-option -g default-shell {{ nix_bin }}/zsh
+set -g default-terminal "screen-256color"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
