--- a/templates/tmux/tmux.conf.j2
+++ b/templates/tmux/tmux.conf.j2
@@ -6,6 +6,7 @@ set -g @plugin 'whame/tmux-modal'
 
 set-option -g default-shell {{ nix_bin }}/zsh
 set -g default-terminal "screen-256color"
+set -g @modal-keybindings-conf {{ tmux_keybindings_file }}
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
