--- a/templates/tmux/keybindings.conf.j2
+++ b/templates/tmux/keybindings.conf.j2
@@ -30,7 +30,7 @@
 # with 'q' (see the `README` for more details).
 
 # Enter/exit modal command mode.
-KBD_CMD=M-m
+KBD_CMD=C-a
 
 # Quit command. This is used to exit command modes that don't require prefix
 # (e.g. "w r" used for resizing panes).
