[Neovim] Import command mode keymap.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -82,6 +82,9 @@ require('lualine').setup {
 --Enable Comment.nvim
 require('Comment').setup()
 
+--Main Keymaps
+vim.api.nvim_set_keymap('n', '<Cr>', ':', { noremap = true, silent = true })
+
 --Remap space as leader key
 vim.api.nvim_set_keymap('', '<Space>', '<Nop>', { noremap = true, silent = true })
 vim.g.mapleader = ' '
