[Neovim] Fix keymap.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -83,7 +83,7 @@ require('lualine').setup {
 require('Comment').setup()
 
 --Main Keymaps
-vim.api.nvim_set_keymap('n', '<Cr>', ':', { noremap = true, silent = true })
+vim.api.nvim_set_keymap('n', '<CR>', ':', { noremap = true })
 
 --Remap space as leader key
 vim.api.nvim_set_keymap('', '<Space>', '<Nop>', { noremap = true, silent = true })
