[Neovim] Configure lualine.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -24,6 +24,8 @@ require('packer').startup(function()
   use {'nvim-telescope/telescope-fzf-native.nvim', run = 'make' }
   use 'mjlbach/onedark.nvim' -- Theme inspired by Atom
   use 'nvim-lualine/lualine.nvim' -- Fancier statusline
+  -- Theme
+  use 'morhetz/gruvbox'
   -- Add indentation guides even on blank lines
   use 'lukas-reineke/indent-blankline.nvim'
   -- Add git related info in the signs columns and popups
@@ -43,6 +45,7 @@ end)
 vim.o.hlsearch = false
 
 --Make line numbers default
+vim.wo.relativenumber = true
 vim.wo.number = true
 
 --Enable mouse mode
@@ -64,20 +67,21 @@ vim.wo.signcolumn = 'yes'
 
 --Set colorscheme
 vim.o.termguicolors = true
-vim.cmd [[colorscheme onedark]]
+vim.cmd [[colorscheme gruvbox]]
 
 -- Set completeopt to have a better completion experience
 vim.o.completeopt = 'menuone,noselect'
 
 --Set statusbar
-require('lualine').setup {
-  options = {
-    icons_enabled = false,
-    theme = 'onedark',
-    component_separators = '|',
-    section_separators = '',
-  },
-}
+require('slanted-gaps')
+-- require('lualine').setup {
+--   options = {
+--     icons_enabled = false,
+--     theme = 'gruvbox',
+--     component_separators = '|',
+--     section_separators = '',
+--   },
+-- }
 
 --Enable Comment.nvim
 require('Comment').setup()
