--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -23,7 +23,11 @@ require('packer').startup(function()
   use { 'nvim-telescope/telescope.nvim', requires = { 'nvim-lua/plenary.nvim' } }
   use {'nvim-telescope/telescope-fzf-native.nvim', run = 'make' }
   use 'mjlbach/onedark.nvim' -- Theme inspired by Atom
-  use 'nvim-lualine/lualine.nvim' -- Fancier statusline
+  use {
+    'nvim-lualine/lualine.nvim',
+    requires = { 'kyazdani42/nvim-web-devicons', opt = true }
+  }
+  use {'akinsho/bufferline.nvim', requires = 'kyazdani42/nvim-web-devicons'}
   -- Theme
   use 'morhetz/gruvbox'
   -- Add indentation guides even on blank lines
@@ -44,9 +48,10 @@ end)
 --Set highlight on search
 vim.o.hlsearch = false
 
---Make line numbers default
+--UI Settings
 vim.wo.relativenumber = true
 vim.wo.number = true
+vim.wo.nowrap = true
 
 --Enable mouse mode
 vim.o.mouse = 'a'
@@ -82,6 +87,8 @@ require('slanted-gaps')
 --     section_separators = '',
 --   },
 -- }
+--Set Tabline
+require("bufferline").setup{}
 
 --Enable Comment.nvim
 require('Comment').setup()
