[Neovim] Fix wrap option.

--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -51,7 +51,7 @@ vim.o.hlsearch = false
 --UI Settings
 vim.wo.relativenumber = true
 vim.wo.number = true
-vim.wo.nowrap = true
+vim.wo.wrap = false
 
 --Enable mouse mode
 vim.o.mouse = 'a'
