--- a/templates/nvim/init.lua.j2
+++ b/templates/nvim/init.lua.j2
@@ -43,6 +43,14 @@ require('packer').startup(function()
   use 'hrsh7th/cmp-nvim-lsp'
   use 'saadparwaiz1/cmp_luasnip'
   use 'L3MON4D3/LuaSnip' -- Snippets plugin
+  -- Start Screen
+  use {
+    "startup-nvim/startup.nvim",
+    requires = {"nvim-telescope/telescope.nvim", "nvim-lua/plenary.nvim"},
+    config = function()
+      require"startup".setup()
+    end
+  }
 end)
 
 --Set highlight on search
@@ -327,4 +335,8 @@ cmp.setup {
     { name = 'luasnip' },
   },
 }
+
+-- Startup Settings
+require('startup_nvim')
+
 -- vim: ts=2 sts=2 sw=2 et
